package com.g4.odontohub.financeiro.domain.event;

public class AcordoInadimplido {
    public final Long acordoId;

    public AcordoInadimplido(Long acordoId) {
        this.acordoId = acordoId;
    }
}