package com.g4.odontohub.financeiro.domain.model;

public class AcordoId {
    private final Long id;

    public AcordoId(Long id) {
        this.id = id;
    }

    public Long getId() { return id; }
}