package com.g4.odontohub.financeiro.domain.model;

public record AcordoPacienteId(Long pacienteId) {}
