package com.g4.odontohub.financeiro.domain.model;

public record LancamentoId(Long id) {}
