package com.g4.odontohub.financeiro.domain.model;

public record ParcelaId(Long id) {}
