package com.g4.odontohub.financeiro.domain.model;

public record ParcelaplanoId(Long planoId) {}
