@startuml

skinparam componentStyle uml2

package "'Parcela' Aggregate" <<Rectangle>> {
	class Parcela <<(A,#fffab8) Aggregate Root>> {
		double valor
		Date dataVencimento
		Date dataPagamento
		int diasAtraso
		double multa
		double juros
		ParcelaId id
		ParcelaplanoId planoId
		StatusParcela status
	}
	class ParcelaplanoId <<(V,DarkSeaGreen) Value Object>> {
		Long planoId
	}
	class ParcelaId <<(V,DarkSeaGreen) Value Object>> {
		Long id
	}
	class PoliticaInadimplencia <<(V,DarkSeaGreen) Value Object>> {
		int diasParaRestricao
		double percentualMultaMensal
		double percentualJurosDia
	}
	enum StatusParcela {
		PENDENTE
		LIQUIDADA
		VENCIDA
		SUBSTITUIDA
	}
	class ParcelaLiquidada <<(E,#ff9f4b) Domain Event>> {
		double valorPago
		Date dataPagamento
		ParcelaId parcelaId
	}
	class ParcelaVencida <<(E,#ff9f4b) Domain Event>> {
		int diasAtraso
		double multa
		double juros
		ParcelaId parcelaId
	}
	class ParcelaService <<(S,DarkSeaGreen) Service>> {
		void liquidarParcela(ParcelaId parcelaId, Date dataPagamento)
		boolean pacienteInadimplente(Long pacienteId)
		boolean pacienteRestrito(Long pacienteId)
		double calcularJurosEMulta(ParcelaId parcelaId, int diasAtraso)
	}
}
package "'FluxoCaixa' Aggregate" <<Rectangle>> {
	class LancamentoFinanceiro <<(A,#fffab8) Aggregate Root>> {
		double valor
		Date data
		String categoria
		String descricao
		boolean geradoAutomaticamente
		LancamentoId id
		TipoLancamento tipo
	}
	class LancamentoId <<(V,DarkSeaGreen) Value Object>> {
		Long id
	}
	enum TipoLancamento {
		ENTRADA
		SAIDA
	}
	class EntradaGeradaAutomaticamente <<(E,#ff9f4b) Domain Event>> {
		double valor
		Date data
		String origem
		LancamentoId lancamentoId
	}
	class SaidaRegistradaManualmente <<(E,#ff9f4b) Domain Event>> {
		double valor
		String categoria
		LancamentoId lancamentoId
	}
	class AlertaFluxoNegativo <<(E,#ff9f4b) Domain Event>> {
		double saldoProjetado
		Date mesReferencia
	}
	class FluxoCaixaService <<(S,DarkSeaGreen) Service>> {
		void registrarEntradaAutomatica(double valor, String descricao, Date data)
		void registrarSaidaManual(double valor, String categoria, String descricao)
		double calcularSaldoProjetado()
		double calcularPontoDeEquilibrio(double custoFixoMensal, double valorMedioProcedimento)
	}
}
package "'Acordo' Aggregate" <<Rectangle>> {
	class Acordo <<(A,#fffab8) Aggregate Root>> {
		String parcelasSubstituidas
		Date dataCriacao
		boolean inadimplido
		AcordoId id
		AcordoPacienteId pacienteId
	}
	class AcordoPacienteId <<(V,DarkSeaGreen) Value Object>> {
		Long pacienteId
	}
	class AcordoId <<(V,DarkSeaGreen) Value Object>> {
		Long id
	}
	class AcordoFirmado <<(E,#ff9f4b) Domain Event>> {
		String parcelasOriginaisSubstituidas
		int quantidadeNovasParcelas
		AcordoId acordoId
	}
	class AcordoInadimplido <<(E,#ff9f4b) Domain Event>> {
		AcordoId acordoId
	}
	class AcordoService <<(S,DarkSeaGreen) Service>> {
		void firmarAcordo(Long pacienteId, String parcelasIds, String novosPagamentos)
		void registrarInadimplenciaAcordo(AcordoId acordoId)
	}
}
EntradaGeradaAutomaticamente --> LancamentoId : lancamentoId
LancamentoFinanceiro --> LancamentoId : id
SaidaRegistradaManualmente --> LancamentoId : lancamentoId
Acordo --> AcordoId : id
Parcela --> ParcelaId : id
AcordoFirmado --> AcordoId : acordoId
ParcelaLiquidada --> ParcelaId : parcelaId
Parcela --> StatusParcela : status
LancamentoFinanceiro --> TipoLancamento : tipo
Parcela --> ParcelaplanoId : planoId
ParcelaVencida --> ParcelaId : parcelaId
Acordo --> AcordoPacienteId : pacienteId
AcordoInadimplido --> AcordoId : acordoId
legend left
  This bounded context implements the subdomain 'FinanceiroSubdomain'.
end legend


@enduml
